lavf/vc1dec: Reduce probe score for streams with invalid frames.

Fixes ticket #7853.